--- a/index.html
+++ b/index.html
@@ -57,30 +57,29 @@
 
   <!-- CONTENT HERE -->
   <main class="clearfix">
-    <div class="slideshow-container">
-      <div class="mySlides slide">
+    <div class="slider">
+      <div class="text">
         <img src="sliders/boston.jpg">
-        <div class="text">home of the asguards</div>
+        <p>home of the asguards</p>
       </div>
-
-      <div class="mySlides slide">
+      <div class="text">
         <img src="sliders/boston1.jpg">
-        <div class="text">odins favorite city</div>
+        <p>odins favorite city</p>
       </div>
 
-      <div class="mySlides slide">
+      <div class="text">
         <img src="sliders/boston2.jpg">
-        <div class="text">lokies prision</div>
+        <p>lokies prision</p>
       </div>
 
-      <div class="mySlides slide">
+      <div class="text">
         <img src="sliders/boston3.jpg">
-        <div class="text">thors favorite people</div>
+        <p>thors favorite people</p>
       </div>
 
-      <div class="mySlides slide">
+      <div class="text">
         <img src="sliders/boston4.jpg">
-        <div class="text">heimdall favorite selfie bomb place</div>
+        <p>heimdall favorite selfie bomb place</p>
       </div>
     </div>
     <br>
